Update Dockerfile
Attempting to use the existing docker for tomcat